# pk_proyects

./: .gitignore  CMakeLists.txt  index.html  pk_high_low.wasm
pk_high_low/: CMakeLists.txt  README.md
pk_high_low/assets/: dex.json
pk_high_low/include/controller/: app_controller.hpp  controller_api.hpp  end_controller.hpp  game_choice.hpp  game_concepts.hpp  game_controller.hpp  game_mode.hpp  game_state_controller.hpp  hl_game_api.hpp  hl_game_controller.hpp  sdl_controller.hpp  settings_api.hpp  settings_controller.hpp
pk_high_low/include/models/: game_model.hpp  model_concepts.hpp  model_factory.hpp  poke_specie.hpp  pokedex.hpp
pk_high_low/include/views/: SystemCheckView.hpp  console_view.hpp  end_view.hpp  hl_game_view.hpp  sdl_config_bg.hpp  sdl_config_view.hpp  sdl_view.hpp  view_concepts.hpp
pk_high_low/src/: main.cpp
pk_high_low/src/controller/: app_controller.cpp  end_controller.cpp  game_state_controller.cpp  hl_game_controller.cpp  settings_controller.cpp
pk_high_low/src/models/: model_factory.cpp  poke_specie.cpp  pokedex.cpp
pk_high_low/src/views/: SystemCheckView.cpp  sdl_config_view.cpp
pk_high_low/test/: test.cpp
pk_high_low/test/models/: poke_specie_test.cpp  pokedex_test.cpp
sdl_utils/: CMakeLists.txt
sdl_utils/include/common/: game_window.hpp
sdl_utils/include/common_ui/: Container.hpp  HBox.hpp  Theme.hpp  VBox.hpp  Widget.hpp  font.hpp  game_window.hpp  image.hpp  layout.hpp  sdl_error.hpp  sdl_handle.hpp  sdl_manager.hpp  static_color_layout.hpp  text.hpp  texture.hpp  window.hpp
sdl_utils/include/effects/: GlowLayer.hpp
sdl_utils/include/widgets/: Button.hpp  ProgressBar.hpp
sdl_utils/include/widgets/special/: CircularEye.hpp
sdl_utils/src/common_ui/: HBox.cpp  VBox.cpp  font.cpp  image.cpp  sdl_manager.cpp  text.cpp  texture.cpp  window.cpp
sdl_utils/src/effects/: GlowLayer.cpp
sdl_utils/src/widgets/: Button.cpp  ProgressBar.cpp
sdl_utils/src/widgets/special/: CircularEye.cpp
site/: index.html  pk_high_low.js  pk_high_low.wasm
